system/metal-operator-remote-test/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metalapi-ingress-to-metal-operator-metal-registry-service-tcp-10000
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - port: 10000
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: metal-operator-remote-test
      app.kubernetes.io/name: metal-operator-remote-test
      control-plane: controller-manager
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metalapi-egress-to-ingress-nginx-controller-tcp-443
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/component: controller
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: metal-operator-remote-test
      app.kubernetes.io/name: metal-operator-remote-test
      control-plane: controller-manager
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metalapi-ingress-from-kube-apiserver-9443
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: kubernetes
          role: apiserver
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: metal-operator-remote-test
      app.kubernetes.io/name: metal-operator-remote-test
      control-plane: controller-manager
  policyTypes:
  - Ingress
